fix: cleanup news component - update image sizing / flow long words were breaking out of their container. stack image on small screens then also use clamp to give fluid sizing with available space.

--- a/src/assets/scss/components/_news.scss
+++ b/src/assets/scss/components/_news.scss
@@ -52,12 +52,6 @@
       grid-row: 1 / 3;
       grid-column: 2 / -1;
       padding: var(--size-xxxxl) calc(var(--size-xl) * 2);
-      // overflow: hidden;
-    }
-  }
-
-  @media screen and (min-width: map-get($breakpoints, 'lg')) {
-    &__list {
     }
   }
 }
@@ -69,15 +63,21 @@
   $self: &;
 
   display: flex;
+  flex-direction: column;
   gap: var(--size-xl);
 
+  @media screen and (min-width: map-get($breakpoints, 'sm')) {
+    flex-direction: row;
+  }
+
   &:not(:last-child) {
-    margin-bottom: var(--size-xxxl);
+    margin-bottom: var(--size-xxxxl);
   }
 
   &__image img {
     aspect-ratio: 1 / 1;
-    min-width: 150px;
+    width: 100%;
+    min-width: clamp(100px, 25vw, 150px);
   }
 
   .kicker {
@@ -98,6 +98,7 @@
 
     #{$self}__image img {
       aspect-ratio: 3 / 2;
+      max-width: none;
     }
 
     #{$self}__heading {
